Always read the image size of the JPEG from the header, as an available EXIF information does not assure that the image size is stored.

BUG: 246854
FIXED-IN: 4.5.2
CCMAIL: jos@vandenoever.info

svn path=/trunk/kdesupport/strigi/; revision=1171107