libstreamanalyzer/plugins/endplugins/jpegendanalyzer.cpp
@@ -67,6 +67,9 @@ public:
     }
     bool checkHeader(const char* header, int32_t headersize) const;
     signed char analyze(AnalysisResult& idx, ::InputStream* in);
+
+private:
+    signed char analyzeSize(AnalysisResult& idx, ::InputStream* in);
 };
 
 /*
@@ -289,42 +292,12 @@ JpegEndAnalyzer::analyze(AnalysisResult& ar, ::InputStream* in) {
 
     const Exiv2::ExifData& exif = img->exifData();
     // if there's exif data, this is a photo, otherwise just an image
-    if( ! exif.empty() ) {
-        ar.addValue(factory->typeField, "http://www.semanticdesktop.org/ontologies/2007/05/10/nexif#Photo");
-    } else {
+    if( exif.empty() ) {
         ar.addValue(factory->typeField, "http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#RasterImage");
-
-        // no exif data is available, read at least the width and height of the image
-        in->reset(0);
-        int32_t nread = in->read(data, 1, 0);
-        if (nread < 6) {
-            m_error.assign("file is too small to be a jpeg file");
-            return -1;
-        }
-
-        int i = 4; // skip header, it has been verified already
-        unsigned short blockSize = readBigEndianUInt16(data + i);
-        while (i < nread) {
-            i += blockSize;
-            if (i + 8 >= nread || (unsigned char)data[i] != 0xFF) {
-                m_error.assign("no valid jpeg");
-                return -1;
-            }
-
-            if ((unsigned char)data[i + 1] == 0xC0) {
-                unsigned short height = readBigEndianUInt16(data + i + 5);
-                unsigned short width  = readBigEndianUInt16(data + i + 7);
-                ar.addValue(factory->exifFields.find("Exif.Photo.PixelYDimension")->second,
-                            height);
-                ar.addValue(factory->exifFields.find("Exif.Photo.PixelXDimension")->second,
-                            width);
-                return 0;
-            } else {
-                i += 2;
-                blockSize = readBigEndianUInt16(data + i);
-            }
-        }
+        return analyzeSize(ar, in);
     }
+
+    ar.addValue(factory->typeField, "http://www.semanticdesktop.org/ontologies/2007/05/10/nexif#Photo");
 
     for (Exiv2::ExifData::const_iterator i = exif.begin(); i != exif.end();++i){
         if (i->key() == "Exif.Photo.FNumber") {
@@ -598,8 +571,46 @@ JpegEndAnalyzer::analyze(AnalysisResult& ar, ::InputStream* in) {
         ds << ImageInfo.getThumbnail();
         ar.addValue(factory->thumbnailField, ba.data(), ba.size());
     }*/
-    return 0;
+
+    return analyzeSize(ar, in);
 }
+
+signed char
+JpegEndAnalyzer::analyzeSize(AnalysisResult& ar, ::InputStream* in) {
+    in->reset(0);
+
+    const char* data;
+    int32_t nread = in->read(data, 1, 0);
+    if (nread < 6) {
+        m_error.assign("file is too small to be a jpeg file");
+        return -1;
+    }
+
+    int i = 4; // skip header, it has been verified already
+    unsigned short blockSize = readBigEndianUInt16(data + i);
+    while (i < nread) {
+        i += blockSize;
+        if (i + 8 >= nread || (unsigned char)data[i] != 0xFF) {
+            m_error.assign("no valid jpeg");
+            return -1;
+        }
+
+        if ((unsigned char)data[i + 1] == 0xC0) {
+            unsigned short height = readBigEndianUInt16(data + i + 5);
+            unsigned short width  = readBigEndianUInt16(data + i + 7);
+            ar.addValue(factory->exifFields.find("Exif.Photo.PixelYDimension")->second,
+                        height);
+            ar.addValue(factory->exifFields.find("Exif.Photo.PixelXDimension")->second,
+                        width);
+            return 0;
+        } else {
+            i += 2;
+            blockSize = readBigEndianUInt16(data + i);
+        }
+    }
+    return -1;
+}
+
 /*
  For plugins, we need to have a way to find out which plugins are defined in a
  plugin. One instance of AnalyzerFactoryFactory per plugin profides this
